font color modify & event update

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 	<link href="css/animate.css" rel="stylesheet" type="text/css" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 	<link href="color/default.css" rel="stylesheet" type="text/css" />
-	<link href="css/custom.css" rel="stylesheet" type="text/css" />
+	<link href="custom.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="/c3s/img/logo.jpg" />
 	<link rel="icon" type="image/png" href="img/logo.jpg">
 	<script src="js/jquery.min.js"></script>
 	<script src='js/moment.min.js'></script>
+    <!--script src="js/jsrender.min.js"></script-->
 	<script src='fullcalendar/fullcalendar.js'></script>
 	<script src='calendar_data.js'></script>
 	<script src='story_data.js'></script>
@@ -227,12 +228,13 @@
 						<p><strong>Upcoming events</strong></p>
 					</div-->
 					<p>
-						<strong>Upcoming events (Thursday, May 14)
+						<strong><!--Upcoming events (Thursday, May 14)-->
+                            New events coming soon, check back later!
 							<!--a href="https://www.eventbrite.com/e/ucla-c3s-grand-opening-seminar-tickets-16372242819">Click to RSVP</a-->
 						</strong>
 					</p>
 					<div class="col-md-12">
-						<img src="events/5_14.jpg" alt="upcoming" width="100%"/>
+						<!--img src="events/5_14.jpg" alt="upcoming" width="100%"/-->
 					</div>
 				</div>
 			</div>
@@ -240,18 +242,32 @@
 				<div class="row text-center">
 					<p></p>
 					<p><strong>Past events</strong></p>
+                    <div>
+                        <div class="col-md-9">
+                            <a class="titleLink" href="events/5_14.jpg">How to Build a Successful Career in US? (Speaker: Wenyuan Shi)</a>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="noteLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205823118&idx=1&sn=915e5f7ca6fad639061ab14381cade25#rd">
+                                (Notes for 5.14)
+                            </a>
+                        </div>
+                    </div>
 					<div>
-						<div class="col-md-9"><a href="events/4_21.jpg">How to Present Your Research? (Speaker: Feng Guo, Dezhi Kang)</a></div>
+						<div class="col-md-9">
+                            <a class="titleLink" href="events/4_21.jpg">How to Present Your Research? (Speaker: Feng Guo, Dezhi Kang)</a>
+                        </div>
 						<div class="col-md-2">
-							<a href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205093160&idx=2&sn=85db27c6b76925b679b0dd82c0eea537#rd">
+							<a class="noteLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205093160&idx=2&sn=85db27c6b76925b679b0dd82c0eea537#rd">
 								(Notes for 4.21)
 							</a>
 						</div>
 					</div>
 					<div>
-						<div class="col-md-9"><a href="events/4_10.jpg">Can we Design Our Career? (Speaker: Jason Cong)</a></div>
+						<div class="col-md-9">
+                            <a class="titleLink" href="events/4_10.jpg">Can we Design Our Career? (Speaker: Jason Cong)</a>
+                        </div>
 						<div class="col-md-2">
-							<a href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204799904&idx=2&sn=f6861f52fe0fd743c2a64bf8b8d326ec#rd">
+							<a class="noteLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204799904&idx=2&sn=f6861f52fe0fd743c2a64bf8b8d326ec#rd">
 								(Notes for 4.10)
 							</a>
 						</div>
@@ -331,15 +347,15 @@
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-12 marginbot-20">
-						<a href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204449108&idx=2&sn=cbf2627c6b2af329cc1b20bd68472d81#rd">回归之路（一）</a>
-						<a href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204449108&idx=3&sn=50a9eb8ed68189e5e9b63726b437e052#rd">回归之路（二）</a>
+						<a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204449108&idx=2&sn=cbf2627c6b2af329cc1b20bd68472d81#rd">回归之路（一）</a>
+						<a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204449108&idx=3&sn=50a9eb8ed68189e5e9b63726b437e052#rd">回归之路（二）</a>
 					</div>
 					<div class="col-md-12 marginbot-20">
-						<a href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205183676&idx=2&sn=8f5b055595bb70e1f6f6dc22f1a541c6#rd">流浪者之歌（一）</a>
-						<a href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205210738&idx=2&sn=b516765f8c1f0b011911ba1530fe0a1a#rd">流浪者之歌（二）</a>
+						<a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205183676&idx=2&sn=8f5b055595bb70e1f6f6dc22f1a541c6#rd">流浪者之歌（一）</a>
+						<a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205210738&idx=2&sn=b516765f8c1f0b011911ba1530fe0a1a#rd">流浪者之歌（二）</a>
 					</div>
 					<div class="col-md-12 marginbot-20">
-						<a href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205601699&idx=2&sn=97a1c8d0f48eb43ed01642e374b8ccac#rd">“留学故事系列”之三</a>
+						<a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205601699&idx=2&sn=97a1c8d0f48eb43ed01642e374b8ccac#rd">“留学故事系列”之三</a>
 					</div>
 					<!--div class="col-md-12 marginbot-20">
 						<a href=""></a>
