china recruiting materials

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 									<li><a href="#advisors">Advisors</a></li>
 									<li><a href="#members">Orgnizers</a></li>
 									<!--li><a href="#contact">Contact</a></li-->
+									<li><a href="#career">Career Development</a></li>
 									<li><a href="#service">Join Us</a></li>
 								</ul>
 							</div>
@@ -741,11 +742,69 @@
 							Research Interests: Healthcare Policy and International Development
 						</div>
 					</div>
+					
+					<div class="member row">
+						<div class="col-md-0"></div>
+						<div class="col-md-3">
+							<img src="members/fukai.jpg" alt="" class="img-responsive" height="200" width="140" />
+						</div>
+						<div class="col-md-9">
+							<p><strong>Kai Fu</strong></p>
+							Second Year Ph.D, Bioinformatics, UCLA <br />
+							B.S. Tongji University <br />
+							Research Interest: Epigenomic regulation of gene expression; Stem Cell Regeneration; Precision Medicine
+						</div>
+					</div>
 
 				</div>
 			</div>
 		</section>
 		<!-- /Section: members -->
+		
+		<!-- /Section: career -->
+		<section id="career" class="home-section color-dark bg-gray">
+			<div class="container marginbot-50">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+							<div class="section-heading text-center">
+								<h2 class="h-bold">Career Opportunity</h2>
+								<div class="divider-header"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-11 col-sm-11">
+						<div class="col-md-5 col-sm-5">
+							<div style="margin: 10px 5px 5px 5px; display: block">
+							<a href="events/zju.pdf">
+							<img src="img/zju.png" height="105px" style="display: block; margin-left: auto; margin-right: auto;">
+							</a>
+							</div>
+						</div>
+						<div class="col-md-2 col-sm-2">
+						</div>
+						<div class="col-md-5 col-sm-5">
+							<div style="margin: 10px 5px 5px 5px; display: block">
+							<a href="events/nankai.pdf">
+							<img src="img/nankai.jpg" height="105px" style="display: block; margin-left: auto; margin-right: auto;">
+							</a>
+							</div>
+						</div>
+						<div class="col-md-5 col-sm-5">
+							<div style="margin: 10px 5px 5px 5px; display: block">
+							<a href="events/donghua.pdf">
+							<img src="img/donghua.jpg" height="105px" style="display: block; margin-left: auto; margin-right: auto;">
+							</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /Section: career -->
 
 		<!-- Section: services -->
 		<section id="service" class="home-section color-dark bg-gray">
