add wanghe profile & modify yibing wang's profile

--- a/index.html
+++ b/index.html
@@ -655,6 +655,19 @@
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
+							<img src="members/wanghe.jpg" alt="" class="img-responsive" height="200" width="140" />
+						</div>
+						<div class="col-md-9">
+							<p><strong>He Wang</strong></p>
+							First year PhD, Molecular, Cellular $ Integrative Physiology, UCLA <br />
+							B.S: Xi'an Jiaotong University, double degree of Forensic Medicine and Business Management <br />
+							Research interest: Cardiac hypertrophy and heart failure, Long non-coding RNA, Epigenetics
+						</div>
+					</div>
+
+					<div class="member row">
+						<div class="col-md-0"></div>
+						<div class="col-md-3">
 							<img src="members/wangying.jpg" alt="" class="img-responsive" height="200" width="140" />
 						</div>
 						<div class="col-md-9">
