change 'career development' to 'careers'

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<li><a href="#advisors">Advisors</a></li>
 									<li><a href="#members">Orgnizers</a></li>
 									<!--li><a href="#contact">Contact</a></li-->
-									<li><a href="#career">Career Development</a></li>
+									<li><a href="#career">Careers</a></li>
 									<li><a href="#service">Join Us</a></li>
 								</ul>
 							</div>
