add new section called 'westwood cafe' and open all links in the new tab/window

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
 		ga('create', 'UA-61783338-1', 'auto');
 		ga('send', 'pageview');
+
+        $(document).ready(function(){
+            $('a').attr('target', '_blank');
+        });
 	</script>
 	
 	<script type="text/javascript">
@@ -81,11 +85,12 @@
 									<!--li><a href="https://www.eventbrite.com/e/ucla-c3s-grand-opening-seminar-tickets-16372242819">RSVP!</a></li-->
 									<li><a href="#photos">Gallery</a></li>
 									<li><a href="#story">Story</a></li>
+                                    <li><a href="#westwood">Westwood Cafe</a></li>
 									<li><a href="#advisors">Advisors</a></li>
 									<li><a href="#members">Orgnizers</a></li>
 									<!--li><a href="#contact">Contact</a></li-->
 									<li><a href="#career">Careers</a></li>
-									<li><a href="#service">Join Us</a></li>
+									<!--li><a href="#service">Join Us</a></li-->
 								</ul>
 							</div>
 							<!-- /.Navbar-collapse -->
@@ -358,6 +363,9 @@
 					<div class="col-md-12 marginbot-20">
 						<a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205601699&idx=2&sn=97a1c8d0f48eb43ed01642e374b8ccac#rd">“留学故事系列”之三</a>
 					</div>
+					<div class="col-md-12 marginbot-20">
+						<a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=206903837&idx=1&sn=e5433f1d0cd005afe3b7fdd8987d2289#rd">“留学故事系列”之四: 科研内外的那点儿事</a>
+					</div>
 					<!--div class="col-md-12 marginbot-20">
 						<a href=""></a>
 						<a href=""></a>
@@ -367,6 +375,40 @@
 			<script src="gallery/insert.js"></script>
 		</section>
 		<!-- /Section: story -->
+
+        <!-- Section: westwood -->
+        <section id="westwood" class="home-section color-dark text-center bg-white">
+            <div class="container marginbot-30">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="wow flipInY" data-wow-offset="0" data-wow-delay="0.4s">
+                            <div class="section-heading text-center">
+                                <h2 class="h-bold">Westwood Cafe</h2>
+                                <div class="divider-header"></div>
+                                <p><strong>Our brand new section!</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-12 marginbot-20">
+                        <a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=207434738&idx=2&sn=1f76c1b0b6b96177b469be47b6342039#rd">UCLA-C3S“西木咖啡馆”话题之一：博士生遇到实验不顺利该怎么办？</a>
+                    </div>
+                    <div class="col-md-12 marginbot-20">
+                        <a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=207618384&idx=1&sn=a0e387d3e437bb1da8a279378314ce8a#rd">UCLA-C3S“西木咖啡馆”话题之二：癌症离我们有多远？</a>
+                    </div>
+
+                    <!--div class="col-md-12 marginbot-20">
+                        <a href=""></a>
+                        <a href=""></a>
+                    </div-->
+                </div>
+            </div>
+            <script src="gallery/insert.js"></script>
+        </section>
+        <!-- /Section: westwood -->
 
 		<!-- Section: advisors -->
 		<section id="advisors" class="home-section color-dark bg-white">
