--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 			</div>
 			<div id='calendar'></div>
 		</section>
-		<!-- Section: schedule -->
+		<!-- /Section: schedule -->
 
 		<!-- Section: gallery -->
 		<section id="photos" class="home-section color-dark text-center bg-white">
@@ -609,6 +609,7 @@
 			</div>
 			<div class="container marginbot-50">
 				<div class="row">
+
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -633,6 +634,18 @@
 							Research Interests: Semantic Web, Temporal Database, Database Provenance and Data Mining
 						</div>
 					</div>
+                    <div class="member row">
+                        <div class="col-md-0"></div>
+                        <div class="col-md-3">
+                            <img src="members/fukai.jpg" alt="" class="img-responsive" height="200" width="140" />
+                        </div>
+                        <div class="col-md-9">
+                            <p><strong>Kai Fu</strong></p>
+                            Third Year Ph.D, Bioinformatics, UCLA <br />
+                            B.S. Tongji University <br />
+                            Research Interest: Epigenomic regulation of gene expression; Stem Cell Regeneration; Precision Medicine
+                        </div>
+                    </div>
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -640,7 +653,7 @@
 						</div>
 						<div class="col-md-9">
 							<p><strong>Jiaqi Gu</strong></p>
-							Second Year PhD Candidate, Computer Science，UCLA. <br />
+							Third Year PhD Candidate, Computer Science, UCLA. <br />
 							B.S. Fudan University <br />
 							Research Interest: Big Data Systems
 						</div>
@@ -657,7 +670,18 @@
 							Research Interests: Systems Biology, Cardiology, Chromatin Structure, Epigenetics
 						</div>
 					</div>
-
+                    <div class="member row">
+                        <div class="col-md-0"></div>
+                        <div class="col-md-3">
+                            <img src="members/kongying.jpg" alt="" class="img-responsive" height="200" width="140" />
+                        </div>
+                        <div class="col-md-9">
+                            <p><strong>Ying Kong</strong></p>
+                            Third Year PhD, Molecular, Cellular & Integrative Physiology, UCLA <br />
+                            M.D. Xi'an Jiaotong University <br />
+                            Research Interest: Stem Cells Aging, Hematology, Immune System Development
+                        </div>
+                    </div>
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -682,7 +706,6 @@
 							Research Interests: Immune Response to Injury, Stem Cell Biology
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -695,7 +718,6 @@
 							Research interests: Genomics, Bioinformatics, Epigenetics, Statistics
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -708,7 +730,6 @@
 							Research interest: Cardiac hypertrophy and heart failure, Long non-coding RNA, Epigenetics
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -721,7 +742,6 @@
 							Research Interests: Skeletal Muscle Wasting and Regeneration, Aging, Immune Regulation of Muscle Physiology
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -734,7 +754,6 @@
 							Research Interest: Landscape design, graphic design
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -748,7 +767,6 @@
 							Research Interests: Hematopoietic Stem Cell Regeneration and Drug Development
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -761,7 +779,18 @@
 							Research Interest: Molecular mechanisms of Parkinson’s Disease
 						</div>
 					</div>
-
+                    <div class="member row">
+                        <div class="col-md-0"></div>
+                        <div class="col-md-3">
+                            <img src="members/yangsong.jpg" alt="" class="img-responsive" height="200" width="140" />
+                        </div>
+                        <div class="col-md-9">
+                            <p><strong>Song Yang</strong></p>
+                            Third Year Ph.D candidate, Chemistry and Biochemistry, UCLA <br />
+                            B.S. Fudan University <br />
+                            Research Interest: Biophysics, Enzyme, Computational chemistry
+                        </div>
+                    </div>
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -773,7 +802,6 @@
 							B.S University of Minnesota,Twin Cities
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -786,7 +814,6 @@
 							Research Interest: Mitochondrial Import of BK Channel in the Heart
 						</div>
 					</div>
-
 					<div class="member row">
 						<div class="col-md-0"></div>
 						<div class="col-md-3">
@@ -797,19 +824,6 @@
 							Second Year Master, Luskin School of Public Affairs, UCLA <br />
 							B.S. Sun Yat-sen University <br />
 							Research Interests: Healthcare Policy and International Development
-						</div>
-					</div>
-					
-					<div class="member row">
-						<div class="col-md-0"></div>
-						<div class="col-md-3">
-							<img src="members/fukai.jpg" alt="" class="img-responsive" height="200" width="140" />
-						</div>
-						<div class="col-md-9">
-							<p><strong>Kai Fu</strong></p>
-							Second Year Ph.D, Bioinformatics, UCLA <br />
-							B.S. Tongji University <br />
-							Research Interest: Epigenomic regulation of gene expression; Stem Cell Regeneration; Precision Medicine
 						</div>
 					</div>
 
@@ -827,7 +841,6 @@
 							<div class="section-heading text-center">
 								<h2 class="h-bold">Career Opportunity</h2>
 								<div class="divider-header"></div>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -863,7 +876,7 @@
 		</section>
 		<!-- /Section: career -->
 
-		<!-- Section: services -->
+		<!-- Section: follow us -->
 		<section id="service" class="home-section color-dark bg-gray">
 			<div class="container marginbot-50">
 				<div class="row">
@@ -941,7 +954,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- /Section: services -->
+		<!-- /Section: follow us -->
 
 		<!-- Section: contact -->
 		<section id="contact" class="home-section nopadd-bot color-dark bg-gray text-center">
