--- a/index.html
+++ b/index.html
@@ -721,6 +721,18 @@
                 <div class="member row">
                     <div class="col-md-0"></div>
                     <div class="col-md-3">
+                        <img src="members/yangshen.jpg" alt="" class="img-responsive" height="200" width="140" />
+                    </div>
+                    <div class="col-md-9">
+                        <p><strong>Yang Shen</strong></p>
+                        Third Year Ph.D., Mechanical Engineering, UCLA <br />
+                        B.Eng. The University of Hong Kong, B.S. Shanghai Jiao Tong University (2+2) <br />
+                        Research Interests: Exoskeleton Robot for Stroke Rehabilitation, Human Computer Interaction, Intelligent Control
+                    </div>
+                </div>
+                <div class="member row">
+                    <div class="col-md-0"></div>
+                    <div class="col-md-3">
                         <img src="members/wanghe.jpg" alt="" class="img-responsive" height="200" width="140" />
                     </div>
                     <div class="col-md-9">
