--- a/index.html
+++ b/index.html
@@ -243,6 +243,26 @@
                     <p><strong>Past events</strong></p>
                     <div>
                         <div class="col-md-9">
+                            <a class="titleLink" href="events/10_28.jpg">Intergenerational Intimacy: A Redefinition of Filial Piety (Speaker: Yunxiang Yan)</a>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="noteLink" href="">
+                                (Notes for 10.28)
+                            </a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="col-md-9">
+                            <a class="titleLink" href="events/9_30.jpg">Expeditions toward Terra Incognita (Unexplored Territory) (Speaker: Chih-Ming Ho)</a>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="noteLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=209024651&idx=1&sn=7b4e7bb9478ab9fb76267013b61bf447#rd">
+                                (Notes for 9.30)
+                            </a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="col-md-9">
                             <a class="titleLink" href="events/5_14.jpg">How to Build a Successful Career in US? (Speaker: Wenyuan Shi)</a>
                         </div>
                         <div class="col-md-2">
@@ -312,25 +332,25 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-6 marginbot-20">
-                        <a id="career_dev" href="" style="color:#8a6d3b">Career Development</a>
+                        <a id="career_dev" class="seminar_link" href="" style="color:#8a6d3b">Career Development</a>
                     </div>
                     <div class="col-md-6 marginbot-20">
-                        <a id="bio" href="" style="color:#8a6d3b">Biomedicine</a>
+                        <a id="bio" class="seminar_link" href="" style="color:#8a6d3b">Biomedicine</a>
                     </div>
                     <div class="col-md-6 marginbot-20">
-                        <a id="eng" href="" style="color:#8a6d3b">Engineering/Materials Science</a>
+                        <a id="eng" class="seminar_link" href="" style="color:#8a6d3b">Engineering/Materials Science</a>
                     </div>
                     <div class="col-md-6 marginbot-20">
-                        <a id="eco" href="" style="color:#8a6d3b">Economics/Business/Law</a>
+                        <a id="eco" class="seminar_link" href="" style="color:#8a6d3b">Economics/Business/Law</a>
                     </div>
                     <div class="col-md-6 marginbot-20">
-                        <a id="chem_phys_earth" href="" style="color:#8a6d3b">Chemistry/Physics/Earth Science</a>
+                        <a id="chem_phys_earth" class="seminar_link" href="" style="color:#8a6d3b">Chemistry/Physics/Earth Science</a>
                     </div>
                     <div class="col-md-6 marginbot-20">
-                        <a id="math_cs" href="" style="color:#8a6d3b">Math/Computer Science</a>
+                        <a id="math_cs" class="seminar_link" href="" style="color:#8a6d3b">Math/Computer Science</a>
                     </div>
-		    <div class="col-md-6 marginbot-20">
-                        <a id="social" href="" style="color:#8a6d3b">Social Science</a>
+		            <div class="col-md-6 marginbot-20">
+                        <a id="social" class="seminar_link" href="" style="color:#8a6d3b">Social Science</a>
                     </div>
                 </div>
             </div>
@@ -403,10 +423,18 @@
                         <a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=207618384&idx=1&sn=a0e387d3e437bb1da8a279378314ce8a#rd">UCLA-C3S“西木咖啡馆”话题之二：癌症离我们有多远？</a>
                     </div>
                     <div class="col-md-12 marginbot-20">
-                        <a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=207771727&idx=1&sn=7a6c326d704f1ef706509127313aca71#rd">UCLA-C3S“UCLA-C3S“西木咖啡馆”话题之三：蛋白和多肽类药物该怎么用？</a>
+                        <a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=207771727&idx=1&sn=7a6c326d704f1ef706509127313aca71#rd">UCLA-C3S“西木咖啡馆”话题之三：蛋白和多肽类药物该怎么用？</a>
+                    </div>
+                    <div class="col-md-12 marginbot-20">
+                        <a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=208019264&idx=1&sn=50500bb8e0cb91836bc6cddf9ce8db6c#rd">UCLA-C3S“西木咖啡馆”话题之四：在美国念本科你快乐吗？（一） by 童晓蕙 （UCSD CSSA主席）</a>
+                    </div>
+                    <div class="col-md-12 marginbot-20">
+                        <a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=208058149&idx=1&sn=288ca68ebb7ea0e833ce589ec0422a2f#rd">UCLA-C3S“西木咖啡馆”话题之四：在美国念本科你快乐吗？（二） by 童晓蕙 （UCSD CSSA主席）</a>
+                    </div>
+                    <div class="col-md-12 marginbot-20">
+                        <a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=208293765&idx=1&sn=a24be45c1487ae5b7880f177a5ede731#rd">UCLA-C3S“西木咖啡馆”话题之五：如何治愈一颗受伤的心 by 高晨 （UCLA）</a>
                     </div>
                     <!--div class="col-md-12 marginbot-20">
-                        <a href=""></a>
                         <a href=""></a>
                     </div-->
                 </div>
