add sztech recruit

--- a/index.html
+++ b/index.html
@@ -873,6 +873,13 @@
                                     </a>
                                 </div>
                             </div>
+                            <div class="col-md-6 col-sm-6">
+                                <div style="margin: 10px 5px 5px 5px; display: block">
+                                    <a href="events/sztech.pdf">
+                                        <img src="img/sztech.jpg" height="120px" style="display: block; margin-left: auto; margin-right: auto;">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
