seperate earth science

--- a/index.html
+++ b/index.html
@@ -302,7 +302,10 @@
                         <a id="eco" class="seminar_link" href="" style="color:#8a6d3b">Economics/Business/Law</a>
                     </div>
                     <div class="col-md-6 marginbot-20">
-                        <a id="chem_phys_earth" class="seminar_link" href="" style="color:#8a6d3b">Chemistry/Physics/Earth Science</a>
+                        <a id="chem_phys" class="seminar_link" href="" style="color:#8a6d3b">Chemistry/Physics</a>
+                    </div>
+                    <div class="col-md-6 marginbot-20">
+                        <a id="earth" class="seminar_link" href="" style="color:#8a6d3b">Earth Science</a>
                     </div>
                     <div class="col-md-6 marginbot-20">
                         <a id="math_cs" class="seminar_link" href="" style="color:#8a6d3b">Math/Computer Science</a>
