--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
                         <p><strong>Upcoming events</strong></p>
                     </div-->
                     <p>
-                        <strong><!--Upcoming events (Thursday, May 14)-->
-                            New events coming soon, check back later!
-                            <!--a href="https://www.eventbrite.com/e/ucla-c3s-grand-opening-seminar-tickets-16372242819">Click to RSVP</a-->
+                        <strong>Upcoming events (Thursday, Jan 28, 2016)
+                            <!--New events coming soon, check back later!-->
                         </strong>
                     </p>
                     <div class="col-md-12">
+                        <a class="eventLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=401707672&idx=1&sn=dcfaeb66d757972022931795f377149d#rd">Dr. Yibin Wang's Distinguished Speaker Seminar</a>
                         <!--img src="events/5_14.jpg" alt="upcoming" width="100%"/-->
                     </div>
                 </div>
