load seminar links when user click navs

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 <li class="active"><a href="#intro">Home</a></li>
                                 <li><a href="#about">About Us</a></li>
                                 <li><a href="#events">Events</a></li>
-                                <li><a href="#seminars">Seminars</a></li>
+                                <li><a class="seminar_nav" href="#seminars">Seminars</a></li>
                                 <li><a href="#story">Story</a></li>
                                 <li><a href="#westwood">Westwood Cafe</a></li>
                                 <li><a href="#advisors">Advisors</a></li>
