--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
                         <p><strong>Upcoming events</strong></p>
                     </div-->
                     <p>
-                        <strong>Upcoming events (Thursday, Jan 28, 2016)
+                        <strong>Upcoming events <!-- (Thursday, Jan 28, 2016) -->
                             <!--New events coming soon, check back later!-->
                         </strong>
                     </p>
                     <div class="col-md-12">
-                        <a class="eventLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=401707672&idx=1&sn=dcfaeb66d757972022931795f377149d#rd">Dr. Yibin Wang's Distinguished Speaker Seminar</a>
+                        <a class="eventLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=401872366&idx=1&sn=126183f5388e0896535b94a58526c9bf#rd">The Promise of Environmental Law in China</a>
                         <!--img src="events/5_14.jpg" alt="upcoming" width="100%"/-->
                     </div>
                 </div>
